--- a/app/views/layouts/manage_cmr.html.erb
+++ b/app/views/layouts/manage_cmr.html.erb
@@ -13,7 +13,8 @@
   <%= csrf_meta_tag %>
 
   <!-- Stylesheets -->
-  <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Open+Sans:400,700', media: 'all' %>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Open+Sans:400,700', media: 'all' unless Rails.env.test? %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
 
   <!-- Javascripts -->
   <%= javascript_include_tag 'application' -%>
